@@ -15,23 +15,23 @@ sub new { shift->SUPER::new(@_, content => '') }
 
 sub add_chunk {
   my ($self, $chunk) = @_;
+
   $self->{content} .= $chunk if defined $chunk;
   return $self
     if !$self->auto_upgrade || $self->size <= $self->max_memory_size;
-  $self->emit(upgrade => my $file = Mojo::Asset::File->new);
+  my $file = Mojo::Asset::File->new;
+  $self->emit(upgrade => $file);
+
   return $file->add_chunk($self->slurp);
 }
 
 sub contains {
-  my $self = shift;
-
+  my $self  = shift;
   my $start = $self->start_range;
-  my $pos = index $self->{content}, shift, $start;
+  my $pos   = index $self->{content}, shift, $start;
   $pos -= $start if $start && $pos >= 0;
   my $end = $self->end_range;
-
-  return -1 if $end && $pos >= $end;
-  return $pos;
+  return $end && $pos >= $end ? -1 : $pos;
 }
 
 sub get_chunk {
